// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="areas.content"
  id="areas.content"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Render default - value[0] 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="default"
  id="default"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Render events.onClick - value[0] 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\",\\"cursor\\":\\"pointer\\"},null]}"
  data-testid="events.onClick"
  id="events.onClick"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Render properties.content - value[0] 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},null]}"
  data-testid="properties.content"
  id="properties.content"
  onClick={[Function]}
>
  Foo
</span>
`;

exports[`Render properties.style - value[0] 1`] = `
<span
  className="{\\"style\\":[{\\"outline\\":\\"none\\"},{\\"border\\":\\"1px solid blue\\"}]}"
  data-testid="properties.style"
  id="properties.style"
  onClick={[Function]}
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</span>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema events.onClick 1`] = `true`;

exports[`Test Schema events.onClick 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
